@@ -5,6 +5,7 @@ UNRELEASED:
 * zone delete removes tasks associated with zone from queue.
 * Show help for ods-enforcer-db-setup
 * In the kasp file, KSK/ZSK section, the algorithm length must be set now.
+* signer clear <zone> would assert when signconf wasn't read yet.
 * The <Interval> tag had been deprecrecated, and is now no longer allowed to
   be specified.
 
